fix card overflow

--- a/components/card-list/index.module.scss
+++ b/components/card-list/index.module.scss
@@ -1,6 +1,7 @@
 .container {
   flex: 0 0 34%;
   padding: 24px;
+  overflow-y: auto;
 }
 
 .inView {
